Bug 148529 - overwrite file in symlinked dir infinite loop
Summary: overwrite file in symlinked dir infinite loop
Status: RESOLVED FIXED
Alias: None
Product: quanta
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: András Manţia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-08-05 12:19 UTC by Mateusz Borowski
Modified: 2007-10-03 13:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mateusz Borowski 2007-08-05 12:19:47 UTC
Version:           3.5.7 (using KDE 3.5.7, Gentoo)
Compiler:          Target: x86_64-pc-linux-gnu
OS:                Linux (x86_64) release 2.6.20.3-awesome

Directory structure in my project is like this:
/
-/dir1
-/dir2
-/dir3 -> /some/other/dir (symlink)

When I create a new file and try to save it in "dir3" which is a symlinked, quanta asks me if I want to add it (the new file) to the project. I say yes, so quanta asks where to save it. I choose the same, symlinked directory "dir3", But the new file is already there and quanta starts infinite loop askikng me if I want to overwrite the file. When I choose Cancel after click few times Overwrite, the file is visible in the project and everything is ok.

I think this is related to bug #138107.

How to reproduce:
1. create new project
2. create a symlinked dir in the project
3. create new file, save it in symlinked dir, and choose to add it to the project.

Sorry for my English :)
Comment 1 András Manţia 2007-10-03 13:29:53 UTC
SVN commit 720634 by amantia:

Fix add to project when saving a new file into a symlinked directory

BUG: 148529

 M  +1 -0      ChangeLog  
 M  +5 -0      project/project.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=720634