Fix add to project when saving a new file into a symlinked directory

BUG: 148529